basically fixes the problem we had earlier haven't tested it yet
more code is needed to be fixed before last stage

--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artist Gallery</title>
+    <title>Gajendra | Artist</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Conveyor Belt Background -->
+    <!-- Static Background -->
+    <div class="static-bg"></div>
+    
+    <!-- Animated Background Tiles (Only in content area) -->
     <div class="conveyor-bg">
-        <div class="fade-left"></div>
-        <div class="fade-right"></div>
-        <div class="tile-row" style="--speed: 30s"></div>
-        <div class="tile-row" style="--speed: 40s"></div>
-        <div class="tile-row" style="--speed: 50s"></div>
+        <div class="tile-row" style="--speed: 40s; --direction: 1"></div>
+        <div class="tile-row" style="--speed: 50s; --direction: -1"></div>
     </div>
 
-    <!-- Header Section -->
+    <!-- Header (No tiles behind) -->
     <header class="dark-header">
-        <h1>MARIA LOPEZ</h1>
+        <h1>Gajendra </h1>
         <p class="subtitle">Digital Artist & Photographer</p>
     </header>
 
-    <!-- Main Gallery -->
+    <!-- Main Content -->
     <main class="dark-main">
-        <!-- Interactive Gallery Container -->
+        <!-- Gallery Container -->
         <div class="gallery-container">
+            <div class="fade-left"></div>
+            <div class="fade-right"></div>
             <div class="tile-row" style="--speed: 30s"></div>
-            <div class="tile-row" style="--speed: 40s"></div>
-            <div class="tile-row" style="--speed: 50s"></div>
         </div>
 
         <!-- Artist About Section -->
@@ -36,19 +36,16 @@
             <div class="artist-portrait"></div>
             <div class="artist-bio">
                 <h2>About The Artist</h2>
-                <p>Maria Lopez is a contemporary digital artist blending surrealism with street photography. Her work explores the tension between urban landscapes and human vulnerability.</p>
-                <p>Recipient of the 2023 International Digital Arts Award, Maria's work has been exhibited in Berlin, Tokyo, and New York.</p>
+                <p>Gajendra is a contemporary digital artist blending surrealism with street photography. Her work explores the tension between urban landscapes and human vulnerability.</p>
                 <div class="artist-links">
-                    <a href="#">View Full Portfolio</a>
                     <a href="request.html">Request Commission</a>
-                    <a href="#">Upcoming Exhibitions</a>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="dark-footer">
-        <p>© 2023 Maria Lopez Studio. All rights reserved.</p>
+        <p>© 2023 Gajendra Studio</p>
     </footer>
 
     <script src="script.js"></script>
