--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,22 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en" class="dark-theme">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gajendra | Artist</title>
+    <title>Maria Lopez | Digital Artist</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Static Background -->
-    <div class="static-bg"></div>
-    
-    <!-- Animated Background Tiles (Only in content area) -->
-    <div class="conveyor-bg">
-        <div class="tile-row" style="--speed: 40s; --direction: 1"></div>
-        <div class="tile-row" style="--speed: 50s; --direction: -1"></div>
+    <!-- Background Tiles -->
+    <div class="background-tiles">
+        <div class="tile-row" style="--speed: 60s"></div>
+        <div class="tile-row" style="--speed: 80s"></div>
     </div>
 
-    <!-- Header (No tiles behind) -->
+    <!-- Header -->
     <header class="dark-header">
-        <h1>Gajendra </h1>
+        <h1>MARIA LOPEZ</h1>
         <p class="subtitle">Digital Artist & Photographer</p>
     </header>
 
@@ -28,7 +26,9 @@
         <div class="gallery-container">
             <div class="fade-left"></div>
             <div class="fade-right"></div>
-            <div class="tile-row" style="--speed: 30s"></div>
+            <div class="gallery-tiles" style="--speed: 30s">
+                <!-- Tiles will be injected by JavaScript -->
+            </div>
         </div>
 
         <!-- Artist About Section -->
@@ -36,16 +36,19 @@
             <div class="artist-portrait"></div>
             <div class="artist-bio">
                 <h2>About The Artist</h2>
-                <p>Gajendra is a contemporary digital artist blending surrealism with street photography. Her work explores the tension between urban landscapes and human vulnerability.</p>
+                <p>Maria Lopez is a contemporary digital artist blending surrealism with street photography. Her work explores the tension between urban landscapes and human vulnerability.</p>
+                <p>Recipient of the 2023 International Digital Arts Award, Maria's work has been exhibited in Berlin, Tokyo, and New York.</p>
                 <div class="artist-links">
+                    <a href="#">View Full Portfolio</a>
                     <a href="request.html">Request Commission</a>
+                    <a href="#">Upcoming Exhibitions</a>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="dark-footer">
-        <p>© 2023 Gajendra Studio</p>
+        <p>© 2023 Maria Lopez Studio</p>
     </footer>
 
     <script src="script.js"></script>
