--- a/public/request.html
+++ b/public/request.html
@@ -1,26 +1,24 @@
+<!-- request.html -->
 <!DOCTYPE html>
-<html lang="en" class="dark-theme">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Make Your Art!!!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Commission Request | Maria Lopez</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Conveyor Belt Background -->
-    <div class="conveyor-bg">
-        <div class="tile-row" style="--speed: 40s"></div>
+    <!-- Background Tiles -->
+    <div class="background-tiles">
         <div class="tile-row" style="--speed: 60s"></div>
         <div class="tile-row" style="--speed: 80s"></div>
     </div>
-    
 
-    <div class="content-overlay">
-        <div class="request-container">
-            <h1>Make Your Art !</h1>
-        
+    <!-- Form Container -->
+    <div class="request-container">
+        <div class="form-container">
+            <h1>Commission Request</h1>
             <form id="commissionForm">
-            <!-- Customer Info -->
                 <div class="form-group">
                     <input type="text" id="name" placeholder="Your Name" required>
                 </div>
@@ -28,19 +26,13 @@
                     <input type="email" id="email" placeholder="Your Email" required>
                 </div>
                 <div class="form-group">
-                    <input type="tel" id="phone" placeholder="Phone ">
-                </div>
-
-                 <!-- Art Details -->
-                <div class="form-group">
                     <select id="size" required>
                         <option value="">Select Size</option>
-                        <option value="Small (12x16)">Small (12x16)</option>
-                        <option value="Medium (18x24)">Medium (18x24)</option>
-                        <option value="Large (24x36)">Large (24x36)</option>
+                        <option value="Small">Small (12×16") - $150</option>
+                        <option value="Medium">Medium (18×24") - $250</option>
+                        <option value="Large">Large (24×36") - $400</option>
                     </select>
                 </div>
-
                 <div class="form-group">
                     <select id="type" required>
                         <option value="">Select Art Type</option>
@@ -49,12 +41,10 @@
                         <option value="Abstract">Abstract</option>
                     </select>
                 </div>
-
                 <div class="form-group">
-                    <textarea id="details" rows="4" placeholder="Special requests/details..." required></textarea>
+                    <textarea id="details" placeholder="Special requests..." required></textarea>
                 </div>
-
-                <button type="submit">Send Request</button>
+                <button type="submit">Submit Request</button>
             </form>
         </div>
     </div>
