--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maria Lopez | Digital Artist</title>
+    <title>Gajendra Choudhari | Artist</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,8 +16,8 @@
 
     <!-- Header -->
     <header class="dark-header">
-        <h1>MARIA LOPEZ</h1>
-        <p class="subtitle">Digital Artist & Photographer</p>
+        <h1>Gajendra Choudhari</h1>
+        <p class="subtitle">Artist & Photographer</p>
     </header>
 
     <!-- Main Content -->
@@ -36,19 +36,19 @@
             <div class="artist-portrait"></div>
             <div class="artist-bio">
                 <h2>About The Artist</h2>
-                <p>Maria Lopez is a contemporary digital artist blending surrealism with street photography. Her work explores the tension between urban landscapes and human vulnerability.</p>
-                <p>Recipient of the 2023 International Digital Arts Award, Maria's work has been exhibited in Berlin, Tokyo, and New York.</p>
+                <p>Gajendra Choudhari is a passanaite traditional artist blending surrealism with peculair creativity. -------------------------</p>
+                <p>---------- awards info--------------------------</p>
                 <div class="artist-links">
-                    <a href="#">View Full Portfolio</a>
+                    
                     <a href="request.html">Request Commission</a>
-                    <a href="#">Upcoming Exhibitions</a>
+                    
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="dark-footer">
-        <p>© 2023 Maria Lopez Studio</p>
+        <p>© 2025 Studio Gajendra Choudhari </p>
     </footer>
 
     <script src="script.js"></script>
