--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             <div class="artist-portrait"></div>
             <div class="artist-bio">
                 <h2>About The Artist</h2>
-                <p>Gajendra Choudhari is a passanaite traditional artist blending surrealism with peculair creativity. -------------------------</p>
+                <p>Gajendra Choudhari is a passanaite traditional artist blending surrealism with peculair creativity.specializing in Creative Painting , Creative art , Mural instalation , 3d art , interior wall art. </p>
                 <p>---------- awards info--------------------------</p>
                 <div class="artist-links">
                     
