--- a/public/request.html
+++ b/public/request.html
@@ -28,9 +28,9 @@
                 <div class="form-group">
                     <select id="size" required>
                         <option value="">Select Size</option>
-                        <option value="Small">Small (12×16") - $150</option>
-                        <option value="Medium">Medium (18×24") - $250</option>
-                        <option value="Large">Large (24×36") - $400</option>
+                        <option value="Small">Small 7x1</option>
+                        <option value="Medium">Medium 8x1</option>
+                        <option value="Large">Large 10x3</option>
                     </select>
                 </div>
                 <div class="form-group">
